fixed spacing with book page form

--- a/react-app/src/components/CSS/Bookshelves.css
+++ b/react-app/src/components/CSS/Bookshelves.css
@@ -535,3 +535,12 @@
     color: #00635d;
     background-color: #00635d;
 } */
+
+.ben_merge_bookDiv_left {
+    width: 200px;
+    height: fit-content;
+}
+
+.ben_bookWrap_bookId {
+    height: 30px;
+}
