--- a/react-app/src/components/CSS/Reviews.css
+++ b/react-app/src/components/CSS/Reviews.css
@@ -178,7 +178,7 @@
 .alex-404-image {
     width: 50%;
     border-radius: 12px;
-    
+
 
 }
 
@@ -217,7 +217,7 @@
 }
 
 #alex_bookshelf_button {
-    height: 100%;
+    height: 30px;
     width: 100%;
     border-radius: 3px;
     border: 1px solid #D6D0C4;
